--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html,body{
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    gap: 5px;
+    gap: 10px;
     width: 30%;
     height: 30%;
     /* background-color: red; */
@@ -48,6 +48,7 @@ html,body{
 }
 .box{
     display: flex;
+    padding: 4px;
     justify-content: center;
     align-items: center;
     color:rgb(108, 158, 58);
@@ -65,7 +66,7 @@ html,body{
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
-    /* padding: 18px; */
+    padding: 2px 2px;
     width: 100%;
     height: calc(100% - 100px);
     font-size: xx-large;
